--- a/Modul 2/Dzień 3/2_DOM/4_Eventy/zadanie06.html
+++ b/Modul 2/Dzień 3/2_DOM/4_Eventy/zadanie06.html
@@ -15,5 +15,5 @@ Globalne: Y: <span id="globalY"></span>
 Lokalne: X: <span id="localX"></span>
 Lokalne: Y: <span id="localY"></span>
 </body>
-
+<script type="text/javascript" src="js/zadanie06.js"></script>
 </html>
