--- a/Modul 2/Dzień 3/2_DOM/6_Tworzenie_nowych_elementow/zadanie01.html
+++ b/Modul 2/Dzień 3/2_DOM/6_Tworzenie_nowych_elementow/zadanie01.html
@@ -14,4 +14,7 @@
 <a class="button">Add element to list!</a>
 
 </body>
+<script type="text/javascript" src="js/zadanie01.js">
+
+</script>
 </html>
