--- a/Modul 2/Dzień 3/2_DOM/7_Inputy_i_formularze/zadanie02.html
+++ b/Modul 2/Dzień 3/2_DOM/7_Inputy_i_formularze/zadanie02.html
@@ -50,13 +50,13 @@
                     </div>
                     <br>
                     <p>
-                        <button class='btn btn-primary'>Submit</button>
+                        <button type="submit" class='btn btn-primary'>Submit</button>
                     </p>
                 </form>
             </div>
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="js/zadanie02.js"></script>
 </body>
 </html>
