--- a/Modul 2/Dzień 3/2_DOM/4_Eventy/zadanie08.html
+++ b/Modul 2/Dzień 3/2_DOM/4_Eventy/zadanie08.html
@@ -12,5 +12,5 @@ Szerokość: <span id="windowHeight"></span>
 Wysokość: <span id="windowWidth"></span>
 
 </body>
-
+<script type="text/javascript" src="js/zadanie08.js"></script>
 </html>
