--- a/Modul 2/Dzień 3/2_DOM/5_Poruszanie_sie_po_drzewie_DOM/zadanie01.html
+++ b/Modul 2/Dzień 3/2_DOM/5_Poruszanie_sie_po_drzewie_DOM/zadanie01.html
@@ -8,16 +8,13 @@
 <body>
 
 <a id="button1" class="button">Guzik 1</a>
-<div class="box" id="box1">
-</div>
+<div class="box" id="box1"></div>
 
 <a id="button2" class="button">Guzik 2</a>
-<div class="box" id="box2">
-</div>
+<div class="box" id="box2"></div>
 
 <a id="button3" class="button">Guzik 3</a>
-<div class="box" id="box3">
-</div>
+<div class="box" id="box3"></div>
 
 </body>
 
