--- a/Modul 2/Dzień 3/2_DOM/6_Tworzenie_nowych_elementow/zadanie04.html
+++ b/Modul 2/Dzień 3/2_DOM/6_Tworzenie_nowych_elementow/zadanie04.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-<ul class="list">
-    <li>Element 1</li>
-    <li>Element 2</li>
-    <li>Element 3</li>
-    <li>Element 4</li>
-</ul>
+  <ul class="list">
+      <li>Element 1</li>
+      <li>Element 2</li>
+      <li>Element 3</li>
+      <li>Element 4</li>
+  </ul>
 
-<a class="button" id="remove">Dodaj przedmiot</a>
+  <a class="button" id="remove">Dodaj przedmiot</a>
 
 </body>
-
+<script src="js/zadanie04.js" type="text/javascript"></script>
 </html>
