--- a/Modul 2/Dzień 3/2_DOM/7_Inputy_i_formularze/zadanie03.html
+++ b/Modul 2/Dzień 3/2_DOM/7_Inputy_i_formularze/zadanie03.html
@@ -5,6 +5,7 @@
     <title>CodersLab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 <nav class='navbar navbar-default'>
@@ -39,6 +40,6 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="js/zadanie03.js"></script>
 </body>
 </html>
